# DevOps-Course-Starter-Module-4

./: .env.template  .env.test  README.md  pyproject.toml  todo_item.py  trello_config.py
tests/: test_integration.py  test_system.py  test_view_model.py
tests_e2e/: test_e2e.py
todo_app/: app.py  app_config.py  flask_config.py  routes.py  trello_config.py  view_model.py
todo_app/data/: todo_item.py  trello_items.py
todo_app/templates/: index.html  layout.html
